@@ -41,8 +41,8 @@
 
 package org.netbeans.modules.debugger.jpda.projects;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import javax.swing.Action;
 
 import org.netbeans.api.debugger.DebuggerEngine;
@@ -55,7 +55,6 @@ import org.netbeans.api.debugger.jpda.LineBreakpoint;
 import org.netbeans.api.debugger.jpda.MethodBreakpoint;
 import org.netbeans.api.debugger.jpda.ThreadBreakpoint;
 import org.netbeans.api.java.classpath.GlobalPathRegistry;
-import org.netbeans.spi.debugger.jpda.EditorContext;
 import org.netbeans.spi.debugger.jpda.SourcePathProvider;
 import org.netbeans.spi.viewmodel.NodeActionsProvider;
 import org.netbeans.spi.viewmodel.UnknownTypeException;
@@ -65,7 +64,7 @@ import org.netbeans.spi.viewmodel.NodeActionsProviderFilter;
 import org.openide.ErrorManager;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileStateInvalidException;
-import org.openide.filesystems.FileUtil;
+import org.openide.filesystems.URLMapper;
 import org.openide.util.NbBundle;
 
 
@@ -197,20 +196,21 @@ public class BreakpointsActionsProvider implements NodeActionsProviderFilter {
     private static FileObject getFileObject(String classRelPath) {
         DebuggerEngine engine = DebuggerManager.getDebuggerManager ().getCurrentEngine();
         if (engine != null) {
-            SourcePathProvider sp = (SourcePathProvider) engine.lookupFirst(null, EditorContext.class);
+            SourcePathProvider sp = engine.lookupFirst(null, SourcePathProvider.class);
             if (sp != null) {
                 String url = sp.getURL(classRelPath, false);
                 if (url == null) {
                     url = sp.getURL(classRelPath, true);
                 }
-                try {
-                    java.io.File file = new java.io.File(new URI(url));
-                    FileObject fo = FileUtil.toFileObject(file);
-                    if (fo != null) {
-                        return fo;
+                if (url != null) {
+                    try {
+                        FileObject fo = URLMapper.findFileObject(new URL(url));
+                        if (fo != null) {
+                            return fo;
+                        }
+                    } catch (MalformedURLException ex) {
+                        ErrorManager.getDefault().notify(ErrorManager.INFORMATIONAL, ex);
                     }
-                } catch (URISyntaxException ex) {
-                    ErrorManager.getDefault().notify(ErrorManager.INFORMATIONAL, ex);
                 }
             }
         }
